# gronckle

./: .gitignore  Manifesto.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
ci/: deploy_to_pypi.sh
scripts/ci-cd/: deploy_to_pypi.sh
scripts/pipe/: update_version.sh
src/gronckle/rag/smart_chunking/: demo_streamlit_app.py  main.py  split_text_responsibly.py  text_splitter_prompt.py
src/gronckle/smart_chunking/: README.md  demo_streamlit_app.py  main.py  text_splitter_prompt.py
