[project]
name = "gronckle"
version = "0.0.2"
authors = [
  { name="Griffin Clark", email="griffin@lionsentry.com" },
]
description = "Quality of content LLM application infrastructure"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"